src/objects/NVMStatsSF__Transaction__c.object
<CustomObject>
    <description>Transaction logging and tracing for the Stats loads</description>
    <fields>
        <fullName>NVMStatsSF__Bytes_Read__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bytes Read</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Channel__c</fullName>
        <label>Channel</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Transaction duration (elapsed time not CPU time)</inlineHelpText>
        <label>Duration(ms)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flags Transactions which encountered a fatal error, such as mis-configuration</inlineHelpText>
        <label>Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Heap__c</fullName>
        <inlineHelpText>Peak observed heap usage</inlineHelpText>
        <label>Heap</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Interval__c</fullName>
        <inlineHelpText>Interval in seconds spanned by this transaction</inlineHelpText>
        <label>Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__IsLast__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this is the last inbound call stats transaction log for this channel</inlineHelpText>
        <label>Is Last Inbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Limits__c</fullName>
        <label>Limits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Logs2__c</fullName>
        <label>Logs2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Logs__c</fullName>
        <label>Logs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__ReQueued_Job__c</fullName>
        <inlineHelpText>Id of any job re-queued when this transaction was checked</inlineHelpText>
        <label>ReQueued Job</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Rows_Processed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rows Processed</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Size__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Size</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Summaries_Saved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Summaries Saved</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Timezone__c</fullName>
        <inlineHelpText>Timezone the transaction ran in and in which a subsequent one will run</inlineHelpText>
        <label>Timezone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Transaction_Group__c</fullName>
        <formula>IF(FLOOR ( MOD( CreatedDate - ($System.OriginDateTime),1) *24) &lt; 10,&apos;0&apos;,&apos;&apos;) &amp;
TEXT(FLOOR ( MOD( CreatedDate - ($System.OriginDateTime),1) *24)) &amp; &apos; &apos; &amp;  NVMStatsSF__Type__c</formula>
        <label>Transaction Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Type__c</fullName>
        <label>Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Window_End__c</fullName>
        <inlineHelpText>End of the transaction window.  Its start is this time minus the Interval</inlineHelpText>
        <label>Window End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__checked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used by workflow to check channel running n hours after this transaction was logged</inlineHelpText>
        <label>Channel Checked</label>
        <type>Checkbox</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>NVMStatsSF__Transactions</fullName>
        <columns>NAME</columns>
        <columns>NVMStatsSF__Time__c</columns>
        <columns>NVMStatsSF__Failed__c</columns>
        <columns>NVMStatsSF__IsLast__c</columns>
        <columns>NVMStatsSF__Bytes_Read__c</columns>
        <columns>NVMStatsSF__Window_End__c</columns>
        <columns>NVMStatsSF__Duration__c</columns>
        <columns>NVMStatsSF__Type__c</columns>
        <columns>NVMStatsSF__Channel__c</columns>
        <columns>NVMStatsSF__Rows_Processed__c</columns>
        <columns>NVMStatsSF__Heap__c</columns>
        <columns>NVMStatsSF__Interval__c</columns>
        <columns>NVMStatsSF__Summaries_Saved__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NVMStatsSF__checked__c</columns>
        <filterScope>Everything</filterScope>
        <label>Transactions</label>
    </listViews>
    <nameField>
        <displayFormat>TX-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>